# repo_progetto

./: .clang-format  CMakeLists.txt  README.md  agent.cpp  agent.hpp  agent_test.cpp  diffusion.cpp  diffusion.hpp  doctest_new.h  equation.cpp  equation.hpp  equation_test.cpp  main_ag_simulation.cpp  main_eq_simulation.cpp  main_pallini.cpp  main_simulation.cpp  matrix.hpp  matrix_test.cpp  pandemic.cpp  pandemic.hpp  pandemic_test.cpp  parameters.cpp  parameters.hpp  people.cpp  people.hpp
Pandemic/: pandemic.cpp  pandemic.hpp  pandemic_test.cpp  parameters.cpp  parameters.hpp  people.cpp  people.hpp  vaccine.hpp
Pandemic/Agent/: agent.cpp  agent.hpp  agent_test.cpp  main_ag_simulation.cpp  matrix.hpp  matrix_test.cpp
Pandemic/Equation/: equation.cpp  equation.hpp  equation_test.cpp  main_eq_simulation.cpp
